# mexc-sniper

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  main.rs
src/api/: mod.rs  rest.rs  websocket.rs
src/detection/: episode.rs  mod.rs  strategy1.rs  strategy2.rs  strategy3.rs  strategy4.rs  strategy5.rs
src/export/: csv_exporter.rs  mod.rs
src/models/: events.rs  market_data.rs  mod.rs
src/utils/: logger.rs
